--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,6 +4,12 @@
     <base href="/"></base>
     <meta charset="utf-8">
     <title>DSI Panel</title>
+    <script src="https://demo.yubico.com/js/u2f-api.js"></script>
+    <script type="text/javascript">
+      window.REMOTE_BASE_URL='https://localhost:8080/api/v1'
+      window.CAS_URL='http://fenix-garuda.tecnico.ulisboa.pt:8080/cas?service='
+
+    </script>
     <!-- build:sass css/style.min.css -->
     <link rel="stylesheet" type="text/css" href="css/style.css"></script>
     <!-- endbuild -->
